docs/api/qiskit/0.19/qiskit.providers.models.JobStatus.mdx
---
title: JobStatus (v0.19)
description: API reference for qiskit.providers.models.JobStatus in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.JobStatus
---

# JobStatus

<Class id="qiskit.providers.models.JobStatus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/jobstatus.py" signature="JobStatus(job_id, status, status_msg, **kwargs)" modifiers="class">
  Model for JobStatus.

  ### job\_id

  <Attribute id="qiskit.providers.models.JobStatus.job_id">
    backend job\_id.

    **Type**

    str
  </Attribute>

  ### status

  <Attribute id="qiskit.providers.models.JobStatus.status">
    status of the job.

    **Type**

    str
  </Attribute>

  ### status\_msg

  <Attribute id="qiskit.providers.models.JobStatus.status_msg">
    status message.

    **Type**

    str
  </Attribute>

  ## Methods

  <span id="jobstatus-from-dict" />

  ### from\_dict

  <Function id="qiskit.providers.models.JobStatus.from_dict" signature="JobStatus.from_dict(data)" modifiers="classmethod">
    Create a new JobStatus object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the JobStatus to create. It will be in the same format as output by [`to_dict()`](qiskit.providers.models.JobStatus#to_dict "qiskit.providers.models.JobStatus.to_dict").

    **Returns**

    **The `JobStatus` from the input**

    dictionary.

    **Return type**

    qiskit.providers.model.JobStatus
  </Function>

  <span id="jobstatus-to-dict" />

  ### to\_dict

  <Function id="qiskit.providers.models.JobStatus.to_dict" signature="JobStatus.to_dict()">
    Return a dictionary format representation of the JobStatus.

    **Returns**

    The dictionary form of the JobStatus.

    **Return type**

    dict
  </Function>
</Class>

