docs/api/qiskit/0.24/qiskit.providers.models.JobStatus.mdx
---
title: JobStatus
description: API reference for qiskit.providers.models.JobStatus
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.JobStatus
---

<span id="qiskit-providers-models-jobstatus" />

# qiskit.providers.models.JobStatus

<Class id="qiskit.providers.models.JobStatus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/providers/models/jobstatus.py" signature="JobStatus(job_id, status, status_msg, **kwargs)">
  Model for JobStatus.

  ### job\_id

  <Attribute id="qiskit.providers.models.JobStatus.job_id" name="job_id">
    backend job\_id.

    **Type**

    str
  </Attribute>

  ### status

  <Attribute id="qiskit.providers.models.JobStatus.status" name="status">
    status of the job.

    **Type**

    str
  </Attribute>

  ### status\_msg

  <Attribute id="qiskit.providers.models.JobStatus.status_msg" name="status_msg">
    status message.

    **Type**

    str
  </Attribute>

  ### \_\_init\_\_

  <Function id="qiskit.providers.models.JobStatus.__init__" name="__init__" signature="__init__(job_id, status, status_msg, **kwargs)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                  |                                                             |
  | ------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------- |
  | [`__init__`](#qiskit.providers.models.JobStatus.__init__ "qiskit.providers.models.JobStatus.__init__")(job\_id, status, status\_msg, \*\*kwargs) | Initialize self.                                            |
  | [`from_dict`](#qiskit.providers.models.JobStatus.from_dict "qiskit.providers.models.JobStatus.from_dict")(data)                                  | Create a new JobStatus object from a dictionary.            |
  | [`to_dict`](#qiskit.providers.models.JobStatus.to_dict "qiskit.providers.models.JobStatus.to_dict")()                                            | Return a dictionary format representation of the JobStatus. |

  ### from\_dict

  <Function id="qiskit.providers.models.JobStatus.from_dict" name="from_dict" signature="classmethod from_dict(data)">
    Create a new JobStatus object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the JobStatus to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.JobStatus.to_dict "qiskit.providers.models.JobStatus.to_dict").

    **Returns**

    **The `JobStatus` from the input**

    dictionary.

    **Return type**

    qiskit.providers.model.JobStatus
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.JobStatus.to_dict" name="to_dict" signature="to_dict()">
    Return a dictionary format representation of the JobStatus.

    **Returns**

    The dictionary form of the JobStatus.

    **Return type**

    dict
  </Function>
</Class>

